# bmp2c

./: .gitignore  LICENSE  README.md  build.sh  launcher_cli.py  launcher_gui.py  pyproject.toml
examples/: Example16x8.c
src/bmp2c/: __init__.py  cli.py  core.py  formatting.py  gui.py  ops.py
tests/: __init__.py  test_ops.py  test_pack.py  test_sort.py
